objects/Location.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>VisitorAddress.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cqworkapp__CQ_Location__c</fullName>
        <description>This field will be used to store the mapping between SF&apos;s location and CQ Location. This will allow hierarchy of SF Location to be considered as one if required or as separate as required.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used by ComplianceQuest to store the mapping between Location and CQ Locations.</inlineHelpText>
        <label>CQ Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>db_days_OpenDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>OpenDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_days_wkcc_StatusLastUpdated__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>wkcc_StatusLastUpdated__c db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tractionguest__Current_Occupation__c</fullName>
        <description>Roll-Up summary field that counts how many people are currently present on this location</description>
        <label>Current Occupation</label>
        <summaryFilterItems>
            <field>tractionguest__Location_Visitors__c.tractionguest__Currently_Onsite__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>tractionguest__Location_Visitors__c.tractionguest__Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tractionguest__Max_Capacity__c</fullName>
        <description>Maximum capacity onsite.  This will change during covid re-opening.</description>
        <inlineHelpText>Maximum capacity onsite.  This will change during covid re-opening.</inlineHelpText>
        <label>Max Capacity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkcc__Level2LocationId__c</fullName>
        <description>For child locations, this value is the level 2 location in its location hierarchy. For level 1 locations, this value is empty. This value is used to aggregate wellness statuses.</description>
        <externalId>true</externalId>
        <inlineHelpText>For child locations, this value is the level 2 location in its location hierarchy. For level 1 locations, this value is empty. This value is used to aggregate wellness statuses.</inlineHelpText>
        <label>Level 2 Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__LocationPath__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The location hierarchy from the root location to this location in the format &lt;level1 Id&gt;:&lt;level2 Id&gt;:&lt;level3 Id&gt;.</description>
        <externalId>true</externalId>
        <inlineHelpText>The location hierarchy from the root location to this location in the format &lt;level1 Id&gt;:&lt;level2 Id&gt;:&lt;level3 Id&gt;.</inlineHelpText>
        <label>Location Path</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wkcc__StatusLastUpdated__c</fullName>
        <description>The date when the status was last changed</description>
        <inlineHelpText>The date when the status was last changed</inlineHelpText>
        <label>Status Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkcc__Status__c</fullName>
        <description>The current status of the location</description>
        <inlineHelpText>The current status of the location</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Hard Close</fullName>
                </value>
                <value>
                    <fullName>Soft Close</fullName>
                </value>
                <value>
                    <fullName>Reduced Density</fullName>
                    <label>Reduced Capacity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Locations</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <columns>wkcc__Status__c</columns>
        <columns>LocationType</columns>
        <columns>RootLocation</columns>
        <columns>ParentLocation</columns>
        <columns>wkcc__StatusLastUpdated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <listViews>
        <fullName>Buildings</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <columns>wkcc__Status__c</columns>
        <columns>LocationType</columns>
        <columns>RootLocation</columns>
        <columns>ParentLocation</columns>
        <columns>VisitorAddress</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LocationType</field>
            <operation>equals</operation>
            <value>Building</value>
        </filters>
        <label>Buildings</label>
    </listViews>
    <listViews>
        <fullName>Floors</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <columns>wkcc__Status__c</columns>
        <columns>LocationType</columns>
        <columns>RootLocation</columns>
        <columns>ParentLocation</columns>
        <columns>VisitorAddress</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LocationType</field>
            <operation>equals</operation>
            <value>Floor</value>
        </filters>
        <label>Floors</label>
    </listViews>
    <listViews>
        <fullName>Spaces</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <columns>wkcc__Status__c</columns>
        <columns>LocationType</columns>
        <columns>RootLocation</columns>
        <columns>ParentLocation</columns>
        <columns>VisitorAddress</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LocationType</field>
            <operation>equals</operation>
            <value>Space</value>
        </filters>
        <label>Spaces</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>wkcc__LimitNameLength</fullName>
        <active>true</active>
        <description>Limit location name to 40 characters to ensure maximum compatibility with Work.com add-on packages.</description>
        <errorConditionFormula>( ISNEW() || ISCHANGED(Name) ) &amp;&amp; LEN(Name) &gt; 40</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Location name is limited to 40 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Location_name_maximum_40</fullName>
        <active>true</active>
        <description>Location name must be lower or equal to 40 characters.</description>
        <errorConditionFormula>LEN(Name) &gt; 40</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Location name must be lower or equal to 40 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkfsl__Timezone_Required_Field</fullName>
        <active>true</active>
        <description>Timezone field must be populated for shift management data creation</description>
        <errorConditionFormula>ISPICKVAL( TimeZone , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>TimeZone</errorDisplayField>
        <errorMessage>Location must have timezone field populated</errorMessage>
    </validationRules>
</CustomObject>